--- a/styles.css
+++ b/styles.css
@@ -48,3 +48,31 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
+/* Global Styles */
+
+:root {
+    --yellow: #F6D64A;
+    --teal: #55BCD5;
+    --purple: #9B26B0;
+    --blue: #499BD2;
+    --dark-gray: #222222;
+    --light-gray: #EAEAEA;
+    --white: #FFFFFF;
+    --black: #000000;
+}
+
+@import url(https://fonts.google.com/share?selection.family=Molle:ital@1%7CMontserrat 
+);
+
+h1, h2, h3 {
+    font-family: Molle, script;
+}
+
+h4, p, q, small, nav, button, form {
+    font-family: Montserrat, sans-serif;
+}
+
+h1 {
+    font-size: 2em;
+}
