--- a/styles.css
+++ b/styles.css
@@ -76,3 +76,15 @@ h4, p, q, small, nav, button, form {
 h1 {
     font-size: 2em;
 }
+
+h2 {
+    font-size: 1.5em;
+}
+
+h3 {
+    font-size: 1.17em;
+}
+
+h4 {
+    font-size: 1em;
+}
